--- a/semantic-ui/grid/grid.html
+++ b/semantic-ui/grid/grid.html
@@ -3,6 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="/theme/bower/semantic/dist/semantic.min.css">
+		<style type="text/css">
+			.ui.grid.collapsed > .column {
+				padding-top: 4px;
+				padding-bottom: 4px;
+			}
+		</style>
 	</head>
 	<body>
 
@@ -91,6 +97,20 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro soluta libero voluptatem, alias eos voluptas modi perferendis dolore molestias accusamus officia. Quis minus ipsam harum iusto, quae nemo autem veritatis.</p>
 			</div>
 		</div>
+
+
+<div class="ui fluid container">
+	<div class="ui two column collapsed grid">
+		<div class="column"><p>2222</p></div>
+		<div class="column"><p>2222</p></div>
+	</div>
+	<div class="ui two column collapsed grid">
+		<div class="column"><p>2222</p></div>
+		<div class="column"><p>2222</p></div>
+	</div>
+</div>
+
+
 
 		<script type="text/javascript" src="/theme/bower/jquery/dist/jquery.js"></script>
 		<script type="text/javascript" src="/theme/bower/semantic/dist/semantic.min.js"></script>
