--- a/npm/all.html
+++ b/npm/all.html
@@ -1,3 +1,17 @@
 <p>npm — это пакетный менеджер node.js.</p>
 <h2>Установка</h2>
 <p><code class="copyToClipboard prettyprint lang-sh">sudo apt-get install npm</code></p>
+
+<h2>Обновление nodejs до последней версии</h2>
+<pre class="prettyprint lang-sh">
+node -v
+nodejs -v
+npm -v
+which node
+which nodejs
+
+sudo npm cache clean -f
+sudo npm install npm@latest -g
+sudo npm install -g n
+sudo n stable
+</pre>
