--- a/css/flexbox/flexbox3.html
+++ b/css/flexbox/flexbox3.html
@@ -19,27 +19,27 @@ html, body {
 
 	/* Ось */
 	flex-direction: row;
-/*	flex-direction: column;
-*/
+	/*flex-direction: column;*/
+
 
 	/* Выравнивание вдоль оси */
 	justify-content: flex-start;
-	justify-content: flex-end;
-	justify-content: center;
-	justify-content: space-between;
-	justify-content: space-around;
+	/*justify-content: flex-end;*/
+	/*justify-content: center;*/
+	/*justify-content: space-between;*/
+	/*justify-content: space-around;*/
 
 
 	/* Выравнивание поперек оси */
 	align-items: stretch;
-/*	align-items: flex-start;
-	align-items: flex-end;
-	align-items: center;
-	align-items: baseline;
-*/
+	/*align-items: flex-start;*/
+	/*align-items: flex-end;*/
+	/*align-items: center;*/
+	/*align-items: baseline;*/
+
 
 	/* Многострочность */
-	flex-wrap: nowrap;
+	/*flex-wrap: nowrap;*/
 	flex-wrap: wrap;
 
 	/* Выравнивани многострочности вдоль оси многострочности (поперек главной оси) */
@@ -53,21 +53,21 @@ html, body {
 }
 .my-flex-block {
 	/*background-color: tomato;*/
-	flex-basis: 22%;
+	/*flex-basis: 22%;*/
 }
 .block1 {
-/*	width: 200px;
-*/	height: 200px;
+	/*width: 200px;*/
+	height: 200px;
 	background-color: tomato;
 }
 .block2 {
-/*	width: 300px;
-*/	height: 100px;
+	/*width: 300px;*/
+	height: 100px;
 	background-color: chocolate;
 }
 .block3 {
-/*	width: 100px;
-*/	height: 300px;
+	/*width: 100px;*/
+	height: 300px;
 	background-color: salmon;
 }
 .block4 {
@@ -81,23 +81,23 @@ html, body {
 </head>
 <body>
 	<div class="my-flex-container">
-		<div class="my-flex-block block1">item1</div>
-		<div class="my-flex-block block2">item2</div>
-		<div class="my-flex-block block3">item3</div>
-		<div class="my-flex-block block4">item4</div>
-		<div class="my-flex-block block5">item5</div>
+		<div class="my-flex-block block1">.block1 1</div>
+		<div class="my-flex-block block2">.block2 1</div>
+		<div class="my-flex-block block3">.block3 1</div>
+		<div class="my-flex-block block4">.block4 1</div>
+		<div class="my-flex-block block5">.block5 1</div>
 
-		<div class="my-flex-block block1">item1</div>
-		<div class="my-flex-block block2">item2</div>
-		<div class="my-flex-block block3">item3</div>
-		<div class="my-flex-block block4">item4</div>
-		<div class="my-flex-block block5">item5</div>
+		<div class="my-flex-block block1">.block1 2</div>
+		<div class="my-flex-block block2">.block2 2</div>
+		<div class="my-flex-block block3">.block3 2</div>
+		<div class="my-flex-block block4">.block4 2</div>
+		<div class="my-flex-block block5">.block5 2</div>
 
-		<div class="my-flex-block block1">item1</div>
-		<div class="my-flex-block block2">item2</div>
-		<div class="my-flex-block block3">item3</div>
-		<div class="my-flex-block block4">item4</div>
-		<div class="my-flex-block block5">item5</div>
+		<div class="my-flex-block block1">.block1 3</div>
+		<div class="my-flex-block block2">.block2 3</div>
+		<div class="my-flex-block block3">.block3 3</div>
+		<div class="my-flex-block block4">.block4 3</div>
+		<div class="my-flex-block block5">.block5 3</div>
 	</div>
 </body>
 </html>
