--- a/ruby/all.html
+++ b/ruby/all.html
@@ -65,6 +65,37 @@ end
 </pre>
 
 <h2>Конструкции, операторы...</h2>
+<p><strong>case</strong></p>
+<pre class="prettyprint lang-rb">
+a = 1..5
+p a
+a.each do |value|
+  case value
+  when 1
+    p 1
+  when 2
+    p 2
+  end
+end
+
+a = 3
+
+puts case a
+when 1..5
+  "It's between 1 and 5"
+when 6
+  "It's 6"
+when String
+  "You passed a string"
+else
+  "You gave me #{a} -- I have no idea what to do with that."
+end
+</pre>
+<h3>Базовый класс Object</h3>
+<pre class="prettyprint lang-rb">
+a = ''
+a.is_a? String # true
+</pre>
 <pre class="prettyprint lang-rb">
 while true
   ...
