--- a/git/all.html
+++ b/git/all.html
@@ -183,6 +183,13 @@ git fetch origin master
 <h3>Запушить ветку в бар</h3>
 <pre class="prettyprint lang-bsh">git push -u origin local</pre>
 <p>это отправляет ветку local в удаленный репозиторий и автоматом делает нашу локальную ветку local отслеживаемой с origin/local :)</p>
+<h2>Путешествия</h2>
+<h3>Ветки удалённые сделаем отслеживаемыми</h3>
+<code class="copyToClipboard">git remote -v</code> — проверим ссылки на удаленный репозиторий
+<p>
+    <code class="copyToClipboard">git fetch origin</code> — <q>извлекает все наработки, отправленные (push) на этот сервер после того, как вы склонировали его (или получили изменения с помощью fetch). Важно отметить, что команда fetch забирает данные в ваш локальный репозиторий, но не сливает их с какими-либо вашими наработками и не модифицирует то, над чем вы работаете в данный момент. Вам необходимо вручную слить эти данные с вашими, когда вы будете готовы.</q>
+</p>
+<p><code class="copyToClipboard">git checkout --track origin/develop</code> — переключиться на удалённую ветку (сделав её локальной и отслеживаемой).</p>
 <h2>ignore</h2>
 <h3>Способы игнорирования файлов</h3>
 <p>Есть различные ситуации, в каждой может применяться свой способ игнорирования. Разберу способы.</p>
