--- a/js/all.html
+++ b/js/all.html
@@ -1,3 +1,4 @@
+<p><code class="copyToClipboard">debugger;</code> — метка для отладки в браузере Chrome.</p>
 <h2>Языковые конструкции</h2>
 <h3>switch case</h3>
 <pre class="prettyprint lang-js">
