--- a/rails/all.html
+++ b/rails/all.html
@@ -5,6 +5,7 @@
 <p><code class="copyToClipboard">rails s</code> - запуск приложения.</p>
 <p><code class="copyToClipboard">rails s -d</code> - запуск как демона.</p>
 <p><code class="copyToClipboard">rails s -b 0.0.0.0</code> - запуск с доступом извне.</p>
+<p><code class="copyToClipboard">rails s -b 0.0.0.0 -p 3002</code> - запуск с доступом извне на порту 3002.</p>
 <p><code class="copyToClipboard">ps aux | grep process_name</code></p>
 <p><code class="copyToClipboard">kill -9 process_id</code></p>
 <h4>Отладка</h4>
