--- a/git/all.html
+++ b/git/all.html
@@ -167,30 +167,45 @@ git config --global alias.hist 'log --graph --pretty=format:"%Cred%h%Creset -%C(
 <p><code>git init</code> (т.к. это настройка репы:)</p>
 <p><code class="copyToClipboard">git config http.sslVerify "false"</code></p>
 <p><code class="copyToClipboard">git config http.sslVerify false</code></p>
-<h2>Отменить</h2>
-<h3>Отменить fetch</h3>
-<pre class="prettyprint lang-bsh">
-git remote add origin server:~/errorprojectpath/
-git fetch origin master
-# вот черт, какую-то фигню затянул
 
-git remote remove origin
-git remote add origin server:~/projectpath/
-git fetch origin master
+<h2>Отменить</h2>
+<h3>Отменить последний коммит <q>C</q></h3>
+<p><strong>Состояние:</strong></p>
+<pre>
+   (F)
+A-B-C
+    ↑
+  master
 </pre>
-<p>Такое ощущение что это не отмена а какая-то перезапись.</p>
-<h2>Ветки</h2>
-<h3>Запушить ветку в бар</h3>
-<pre class="prettyprint lang-bsh">git push -u origin local</pre>
-<p>это отправляет ветку local в удаленный репозиторий и автоматом делает нашу локальную ветку local отслеживаемой с origin/local :)</p>
-<h2>Путешествия</h2>
+<ol>
+<li><code class="copyToClipboard">git reset --hard HEAD~1</code>, <strong>результат:</strong></li>
+<pre>
+ (F)
+A-B
+  ↑
+master
+</pre>
+<li><code class="copyToClipboard">git reset HEAD~1</code>, <strong>результат:</strong></li>
+<pre>
+   (F)
+A-B-C
+  ↑
+master
+</pre>
+<p>Теперь <var>git status</var> покажет изменения, которые мы проверили в <q>C</q>. Мы ничего не потеряли!</p>
+<li><code>git reset --soft HEAD~1</code> — Это не только оставляет файлы в покое, но и оставляет их в индексе. Когда мы сделаем <var>git status</var>, мы увидим, что те же файлы находятся в индексе, как и раньше. Фактически, сразу после этой команды мы можем сделать <var>git commit</var> — это переделает коммит <q>C</q>, который у нас был.</li>
+</ol>
+<h2>Удалённые репозитории</h2>
 <h3>Ветки удалённые сделаем отслеживаемыми</h3>
 <code class="copyToClipboard">git remote -v</code> — проверим ссылки на удаленный репозиторий
 <p>
     <code class="copyToClipboard">git fetch origin</code> — <q>извлекает все наработки, отправленные (push) на этот сервер после того, как вы склонировали его (или получили изменения с помощью fetch). Важно отметить, что команда fetch забирает данные в ваш локальный репозиторий, но не сливает их с какими-либо вашими наработками и не модифицирует то, над чем вы работаете в данный момент. Вам необходимо вручную слить эти данные с вашими, когда вы будете готовы.</q>
 </p>
 <p><code class="copyToClipboard">git checkout --track origin/develop</code> — переключиться на удалённую ветку (сделав её локальной и отслеживаемой).</p>
-<h2>ignore</h2>
+<h3>Запушить ветку в бар</h3>
+<pre class="prettyprint lang-bsh">git push -u origin local</pre>
+<p>это отправляет ветку local в удаленный репозиторий и автоматом делает нашу локальную ветку local отслеживаемой с origin/local :)</p>
+<h2>Игнорирование</h2>
 <h3>Способы игнорирования файлов</h3>
 <p>Есть различные ситуации, в каждой может применяться свой способ игнорирования. Разберу способы.</p>
 <h4><code>.gitignore</code> — исключения в репозитории для всех</h4>
